# Sawti

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/superpowers/plans/: 2026-06-30-m0-foundation.md  2026-06-30-m1-offline-transcribe.md
docs/superpowers/specs/: 2026-06-30-sawti-design.md
eval/: __init__.py  harness.py  metrics.py  report.py
sawti/: __init__.py  audio_io.py  cli.py  config.py  engine.py  engine_m4t.py  env.py  fallback.py  lang_codes.py  logging_setup.py  pipeline.py  postprocess.py  postprocess_real.py  quality_gate.py  quality_gate_balanced.py  script_detect.py  segmenter.py  segmenter_silero.py  sources.py  text_normalize.py  types.py  vad.py
tests/: conftest.py  test_audio_io.py  test_cli.py  test_config.py  test_engine.py  test_engine_m4t.py  test_engine_m4t_integration.py  test_eval_harness.py  test_fallback.py  test_lang_codes.py  test_logging_setup.py  test_pipeline.py  test_postprocess.py  test_postprocess_real.py  test_quality_gate.py  test_quality_gate_balanced.py  test_script_detect.py  test_segmenter.py  test_segmenter_silero.py  test_sources.py  test_text_normalize.py  test_types.py  test_vad.py
