[project]
name = "sawti"
version = "0.0.1"
description = "Multilingual speech-to-text translation: speak in any supported language or a code-switched mix, receive text in a pre-selected target language."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.41",
    "sentencepiece>=0.2",
    "silero-vad>=5.1",
    "soundfile>=0.12",
    "librosa>=0.10",
    "sacrebleu>=2.4",
    "regex>=2024.4",
]

[project.scripts]
sawti = "sawti.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: tests that load real ML models (skipped unless SAWTI_RUN_INTEGRATION=1)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
