[project]
name = "sawti"
version = "0.0.1"
description = "Multilingual speech-to-text translation: speak in any supported language or a code-switched mix, receive text in a pre-selected target language."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.41,<5",
    "sentencepiece>=0.2",
    "silero-vad>=5.1",
    "soundfile>=0.12",
    "librosa>=0.10",
    "sacrebleu>=2.4",
    "regex>=2024.4",
    "tiktoken>=0.13.0",
    "protobuf>=7.35.1",
]

[project.scripts]
sawti = "sawti.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: tests that load real ML models (skipped unless SAWTI_RUN_INTEGRATION=1)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyTorch CUDA wheels (the default PyPI torch is CPU-only). cu126 works with
# the local driver (CUDA 13.3) via minor-version compatibility.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
